tests/snapshots/regression/collections__trailing_commas_everywhere.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/trailing_commas_everywhere.flx
exit_code: 1

• 3 errors • tests/fixtures/collections/trailing_commas_everywhere.flx
error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/collections/trailing_commas_everywhere.flx:1:1
  |
1 | [1,2,];
  | ^^^^^^^
2 | f(1,2,);
  | ^^^^^^^^
3 | fn g(a,b,) { print(a); print(b); }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean `g`?


error[E418]: Strict Effect Annotation Required

Effectful function `g` must declare `with IO` in strict mode.

  tests/fixtures/collections/trailing_commas_everywhere.flx:3:1
  |
3 | fn g(a,b,) { print(a); print(b); }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------- missing explicit effect annotation

Hint:
  Add explicit `with IO` to the function signature.

Found 3 errors.
